--- a/index.html
+++ b/index.html
@@ -2,15 +2,36 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
 
     <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="numbers-style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+    <title>toybox</title>
+
+
+    <link rel="icon" type="image/jpg" href="/assets/favicon.png">
+
+    <meta name="description" content="let's make the next wordle · ship a daily game, get a steam gift card!">
+
+    <meta property="og:url" content="https://toybox.hackclub.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="toybox">
+    <meta property="og:description" content="let's make the next wordle · ship a daily game, get a steam gift card!">
+    <meta property="og:image" content="/assets/ogimg.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="toybox.hackclub.com">
+    <meta property="twitter:url" content="https://toybox.hackclub.com">
+    <meta name="twitter:title" content="toybox">
+    <meta name="twitter:description" contents="let's make the next wordle · ship a daily game, get a steam gift card!">
+    <meta name="twitter:image" content="/assets/ogimg.png">
+
+    <meta name="theme-color" content="#9A754E">
+
+    <link rel="canonical" href="https://toybox.hackclub.com">
+
   </head>
 
 
@@ -27,14 +48,58 @@
         <img id="open-logo" src="assets/logo.png" alt="toybox">
         <p>ship a <em>daily</em> game, get a steam gift card!</p>
         <p>16 – 22 july 2025</p>
-        <a href="#">make a game now</a>
+        <a href="https://forms.hackclub.com/toybox" target="_blank" class="submit">submit!</a>
       </section>
 
       <section id="sample">
-        <div class="text">
-          <p>what counts as a daily game: </p>
-        </div>
-        <div class="interactive">
+
+
+            <h1 class="section">a DAILY GAME:</h1>
+            <img id="reqs" class="desktop" src="assets/req.png" alt="has a new level every day, the level is the same for everyone around the world, has a win condition, lets you copy to share with friends, and is fun!">
+            <img id="reqs" class="mobile" src="assets/req_mobile.png" style="width: 100%;" alt="has a new level every day, the level is the same for everyone around the world, has a win condition, lets you copy to share with friends, and is fun!">
+
+
+
+            <h1>such as...</h1>
+            <div class="" id="sample-examples">
+              <div class="">
+                <p><img src="assets/games/wordle.svg" alt=""></p>
+                <p><a href="#">Wordle</a></p>
+                <p>by New York Times</p>
+              </div>
+              <div class="">
+                <p><img src="assets/games/bracketcity.png" alt=""></p>
+                <p><a href="#">Bracket City</a></p>
+                <p>by The Atlantic</p>
+              </div>
+
+              <div class="">
+                <p><img src="assets/games/dailyakari.png" alt=""></p>
+                <p><a href="#">Daily Akari</a></p>
+                <p>by Nikoli</p>
+              </div>
+
+              <div class="">
+                <p><img src="assets/games/dailydungeon.png" alt=""></p>
+                <p><a href="#">Daily Dungeon</a></p>
+                <p>by Vijay</p>
+              </div>
+
+              <div class="">
+                <p><img src="assets/games/zip.svg" alt=""></p>
+                <p><a href="#">Zip</a></p>
+                <p>by LinkedIn</p>
+              </div>
+
+              <div class="">
+                <p><img src="assets/games/angle.svg" alt=""></p>
+                <p><a href="#">Angle</a></p>
+                <p>by Teuteuf Games</p>
+              </div>
+
+
+            </div>
+        <!-- <div class="interactive">
           <div class="" id="numbers">
 
             <div class="game-box box">
@@ -55,57 +120,104 @@
 
 
 
-          </div>
+          </div> -->
 
-          <div class="" id="samples">
 
-          </div>
         </div>
 
 
       </section>
+
 
       <section id="prize">
-        <div class="" id="prize-1">
-          <p>tier 1</p>
-          <p>sticker sheet!</p>
+        <h1 class="h1-flipped section">prizes!</h1>
+        <p style="margin: 8px 0;">there are three tiers of prizes based on the quality and effort put into your game.</p>
+        <p style="margin: 8px 0;">as you submit, you can choose the tier that you want — we will review and assign accordingly!</p>
+        <div class="hor">
+          <div class="prize-card" id="prize-1">
+            <img src="assets/sticker.png" alt="" style="transform: rotate(6deg)">
+            <h1>tier 1: sticker sheet!</h1>
+            <p>for quick, simple projects</p>
 
+          </div>
+
+          <div class="prize-card" id="prize-2">
+            <img src="assets/prize2.png" alt="">
+            <h1 class="h1-flipped">tier 2: keycap keychain!</h1>
+            <p>for interesting, fun projects</p>
+          </div>
+
+          <div class="prize-card" id="prize-3">
+            <img src="assets/prize3.png" alt="">
+            <h1>tier 3: $10 steam gift card!</h1>
+            <p>for truly polished & well-made projects</p>
+
+          </div>
         </div>
 
-        <div class="" id="prize-2">
-          <p>tier 2</p>
-          <p>light-up keychain!</p>
-        </div>
-
-        <div class="" id="prize-3">
-          <p>tier 3</p>
-          <p>$10 steam gift card!</p>
-
-        </div>
 
 
       </section>
 
 
+      <section id="begin">
+        <h1 class="section">let's begin!</h1>
+        <div class="steps" style="position: relative;">
+          <div class="" style="position: relative; left: -96px;">
+            <img src="assets/1.png" alt=""><p>make a daily game using html/javascript or any game engine</p>
+          </div>
+          <div class="" style="position: relative; left: -32px;">
+            <img src="assets/2.png" alt=""><p>track your hours with <a href="https://hackatime.hackclub.com" target="_blank">hackatime</a> as you code!</p>
+          </div>
+          <div class="" style="position: relative; left: 32px;">
+            <img src="assets/3.png" alt=""><p>ship your game on the web (with enough levels for a week*)</p>
+          </div>
+          <div class="" style="position: relative; left: 96px;">
+            <img src="assets/4.png" alt=""><p><a href="https://forms.hackclub.com/toybox" target="_blank">submit</a> for awesome prizes :D</p>
+          </div>
+
+
+        </div>
+      </section>
+
       <section id="faq">
-        <p>toybox requirements</p>
-        <ul>
-          <li>a game - should be fun!</li>
-          <li>new level every day</li>
-          <li>levels should be the same for everyone each day around the world</li>
-          <li>be able to win or finish the game each day</li>
-          <li>copy to clipboard to share stats every day</li>
-        </ul>
-        <p>how to start?</p>
-        <ul>
-          <li>track your hours with hackatime</li>
-          <li>your game should be playable on the WEB</li>
-          <li>automatic levels every day, or at least enough for a week (& you can play old levels)</li>
-        </ul>
+        <h1 class="h1-flipped">more questions?</h1>
+        <details>
+          <summary>am i eligible to participate?</summary>
+          yes, if you're 18 years old or under!
+        </details>
+        <details>
+          <summary>how do i make my game polished for the tier 3 prize?</summary>
+          make it mobile-friendly, add animations that make it more playful and fun to use. design it well and see whether it holds up against the other game samples! your hackatime hours will also be taken into account when deciding the tiers.
+        </details>
+        <details>
+          <summary>what's required?</summary>
+          your game must: be available to play on the web, have a new level each day, have a sharing function, have enough levels for seven days. your site must also be open-sourced on github and your hours tracked with hackatime.
+
+        </details>
+        <details>
+          <summary>seven days of game content?</summary>
+          make sure your game either 1. auto-generates levels so that people can play it forever, or 2. have custom levels for at least seven days and let people play old levels in the future!
+
+        </details>
+
+        <details>
+          <summary>can i work in a team?</summary>
+          please do toybox as individuals only. no teams allowed!
+        </details>
+
+        <details>
+          <summary>have more questions?</summary>
+          visit <a href="https://hackclub.slack.com/archives/C096HCT11G9" target="_blank">#toybox</a> on <a href="https://slack.hackclub/com" target="_blank">hack club slack</a>!
+        </details>
+
+
       </section>
     </main>
 
     <footer>
+      made with ❤︎ by @tongyu
+
     </footer>
 
     <script type="text/javascript" src="game.js">
