content changes and ogimg

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +51,7 @@
         <p><i>let's make the next wordle.</i></p>
         <img id="open-logo" src="assets/logo.png" alt="toybox">
         <p>ship a <em>daily</em> game, get a steam gift card!</p>
-        <p>16 – 22 july 2025</p>
+        <p>17 – 22 july 2025</p>
         <a href="https://forms.hackclub.com/toybox" target="_blank" class="submit">submit!</a>
       </section>
 
@@ -138,6 +142,7 @@
             <img src="assets/sticker.png" alt="" style="transform: rotate(6deg)">
             <h1>tier 1: sticker sheet!</h1>
             <p>for quick, simple projects</p>
+            <p>~ 1-2 hackatime hours</p>
 
           </div>
 
@@ -145,12 +150,14 @@
             <img src="assets/prize2.png" alt="">
             <h1 class="h1-flipped">tier 2: keycap keychain!</h1>
             <p>for interesting, fun projects</p>
+            <p>~ 2-4 hackatime hours</p>
           </div>
 
           <div class="prize-card" id="prize-3">
             <img src="assets/prize3.png" alt="">
             <h1>tier 3: $10 steam gift card!</h1>
             <p>for truly polished & well-made projects</p>
+            <p>~ >4 hackatime hours</p>
 
           </div>
         </div>
@@ -172,9 +179,12 @@
           <div class="" style="position: relative; left: 32px;">
             <img src="assets/3.png" alt=""><p>ship your game on the web (with enough levels for a week*)</p>
           </div>
-          <div class="" style="position: relative; left: 96px;">
+          <!-- <div class="" style="position: relative; left: 96px;">
             <img src="assets/4.png" alt=""><p><a href="https://forms.hackclub.com/toybox" target="_blank">submit</a> for awesome prizes :D</p>
-          </div>
+          </div> -->
+
+          <a href="https://forms.hackclub.com/toybox" target="_blank" class="submit" style="position: relative; left:160px"><img src="assets/4.png" alt="">submit for awesome prizes :D</a>
+
 
 
         </div>
@@ -204,6 +214,11 @@
         <details>
           <summary>can i work in a team?</summary>
           please do toybox as individuals only. no teams allowed!
+        </details>
+
+        <details>
+          <summary>can i double-dip with other hack club events??</summary>
+          no double-dipping is allowed for toybox — sorry!
         </details>
 
         <details>
