--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
               </div>
 
               <div class="">
-                <p><img src="assets/games/angle.svg" alt=""></p>
-                <p><a href="#">Angle</a></p>
-                <p>by Teuteuf Games</p>
+                <p><img src="assets/games/murdle.png" alt=""></p>
+                <p><a href="#">Murdle</a></p>
+                <p>by G. T. Karber</p>
               </div>
 
 
