--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <section id="prize">
         <h1 class="h1-flipped section">prizes!</h1>
         <p style="margin: 8px 0;">there are three tiers of prizes based on the quality and effort put into your game.</p>
-        <p style="margin: 8px 0;">as you submit, you can choose the tier that you want — we will review and assign accordingly!</p>
+        <p style="margin: 8px 0;">as you submit, you can choose the tier that you want — we will review and assign accordingly! (the hackatime hours are suggestions and do not need to be strictly followed.)</p>
         <div class="hor">
           <div class="prize-card" id="prize-1">
             <img src="assets/sticker.png" alt="" style="transform: rotate(6deg)">
@@ -157,7 +157,7 @@
             <img src="assets/prize3.png" alt="">
             <h1>tier 3: $10 steam gift card!</h1>
             <p>for truly polished & well-made projects</p>
-            <p>~ >4 hackatime hours</p>
+            <p>~ >3-4 hackatime hours</p>
 
           </div>
         </div>
