--- a/index.html
+++ b/index.html
@@ -53,6 +53,31 @@
         <p>ship a <em>daily</em> game, get a steam gift card!</p>
         <p>17 – 22 july 2025</p>
         <a href="https://forms.hackclub.com/toybox" target="_blank" class="submit">submit!</a>
+
+        <!-- <details id="game">
+          <summary>play the toybox game</summary>
+          <div class="interactive">
+            <div class="" id="numbers">
+
+              <div class="game-box box">
+                <div id="grid-snap">
+
+                </div>
+                <div id="game-grid" class="game-grid">
+                </div>
+
+                <hr/>
+
+                <div id="drag-box">
+
+
+                </div>
+
+              </div>
+
+            </div>
+
+        </details> -->
       </section>
 
       <section id="sample">
@@ -68,63 +93,41 @@
             <div class="" id="sample-examples">
               <div class="">
                 <p><img src="assets/games/wordle.svg" alt=""></p>
-                <p><a href="#">Wordle</a></p>
+                <p><a href="https://www.nytimes.com/games/wordle/index.html" target="_blank">Wordle</a></p>
                 <p>by New York Times</p>
               </div>
               <div class="">
                 <p><img src="assets/games/bracketcity.png" alt=""></p>
-                <p><a href="#">Bracket City</a></p>
+                <p><a href="https://www.theatlantic.com/games/bracket-city/" target="_blank">Bracket City</a></p>
                 <p>by The Atlantic</p>
               </div>
 
               <div class="">
                 <p><img src="assets/games/dailyakari.png" alt=""></p>
-                <p><a href="#">Daily Akari</a></p>
+                <p><a href="https://dailyakari.com/" target="_blank">Daily Akari</a></p>
                 <p>by Nikoli</p>
               </div>
 
               <div class="">
                 <p><img src="assets/games/dailydungeon.png" alt=""></p>
-                <p><a href="#">Daily Dungeon</a></p>
+                <p><a href="https://dailydungeon.net" target="_blank">Daily Dungeon</a></p>
                 <p>by Vijay</p>
               </div>
 
               <div class="">
                 <p><img src="assets/games/zip.svg" alt=""></p>
-                <p><a href="#">Zip</a></p>
+                <p><a href="https://www.linkedin.com/games/zip/" target="_blank">Zip</a></p>
                 <p>by LinkedIn</p>
               </div>
 
               <div class="">
                 <p><img src="assets/games/murdle.png" alt=""></p>
-                <p><a href="#">Murdle</a></p>
+                <p><a href="https://murdle.com/" target="_blank">Murdle</a></p>
                 <p>by G. T. Karber</p>
               </div>
 
 
             </div>
-        <!-- <div class="interactive">
-          <div class="" id="numbers">
-
-            <div class="game-box box">
-              <div id="grid-snap">
-
-              </div>
-              <div id="game-grid" class="game-grid">
-              </div>
-
-              <hr/>
-
-              <div id="drag-box">
-
-
-              </div>
-
-            </div>
-
-
-
-          </div> -->
 
 
         </div>
