--- a/index.html
+++ b/index.html
@@ -203,15 +203,22 @@
           <summary>how do i make my game polished for the tier 3 prize?</summary>
           make it mobile-friendly, add animations that make it more playful and fun to use. design it well and see whether it holds up against the other game samples! your hackatime hours will also be taken into account when deciding the tiers.
         </details>
+
         <details>
           <summary>what's required?</summary>
           your game must: be available to play on the web, have a new level each day, have a sharing function, have enough levels for seven days. your site must also be open-sourced on github and your hours tracked with hackatime.
 
         </details>
+
         <details>
           <summary>seven days of game content?</summary>
           make sure your game either 1. auto-generates levels so that people can play it forever, or 2. have custom levels for at least seven days and let people play old levels in the future!
 
+        </details>
+
+        <details>
+          <summary>when does this end?</summary>
+          submissions close end-of-day july 22 PDT (utc-7)!
         </details>
 
         <details>
