game dragging fixed

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <div class="" id="numbers">
 
               <div class="game-box box">
+                <button type="button" name="button" onclick="clearBoard()">clear board</button>
                 <div id="grid-snap">
 
                 </div>
