--- a/index.html
+++ b/index.html
@@ -56,29 +56,55 @@
 
         <!-- <details id="game">
           <summary>play the toybox game</summary>
+          <div id="confetti-container">
+
+          </div>
+
           <div class="interactive">
+
             <div class="" id="numbers">
 
+
+
+
               <div class="game-box box">
-                <button type="button" name="button" onclick="clearBoard()">clear board</button>
-                <div id="grid-snap">
+
+
+                <div class="">
+                  <div class="">
+                    <div id="grid-snap">
+
+                    </div>
+                    <div id="game-grid" class="game-grid">
+                    </div>
+                  </div>
+
+                  <button type="button" name="button" onclick="clearBoard()" id="clear-button">clear board</button>
 
                 </div>
-                <div id="game-grid" class="game-grid">
-                </div>
 
-                <hr/>
+
+
 
                 <div id="drag-box">
 
-
                 </div>
 
+
+                <div id="game-cover">
+                  <h2>Play this game</h2>
+                  <button id="start-game-btn" style="font-size:1.5em;padding:0.5em 2em;">Start</button>
+                </div>
               </div>
+              <span id="timer" style="font-size:1.2em;margin-left:20px;display:none;">00:00</span>
 
             </div>
 
+
+
+
         </details> -->
+
       </section>
 
       <section id="sample">
