--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>17 – 22 july 2025</p>
         <a href="https://forms.hackclub.com/toybox" target="_blank" class="submit">submit!</a>
 
-        <!-- <details id="game">
+        <details id="game">
           <summary>play the toybox game</summary>
           <div id="confetti-container">
 
@@ -104,8 +104,10 @@
 
 
                 <div id="game-cover">
-                  <h2>Play this game</h2>
-                  <button id="start-game-btn" style="font-size:1.5em;padding:0.5em 2em;">Start</button>
+                  <h2>toybox!</h2>
+                  <img src="assets/toyboxgame/sample.png" alt="">
+                  <p>arrange pieces to be symmetrical about the diagonal line.</p>
+                  <button id="start-game-btn" style="padding:0.5em 2em;">start</button>
                 </div>
               </div>
 
@@ -114,7 +116,7 @@
 
 
 
-        </details> -->
+        </details>
 
       </section>
 
