--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
 
                   </div>
 
+                  <div id="end-stats" style="display:none; padding:2em; text-align:center;">
+                    <div>
+                      <span id="end-puzzle-number"></span><br>
+                      <span id="end-puzzle-date"></span><br>
+                      🕓 <span id="final-time" style="font-weight:bold;"></span><br>
+                      <button id="copy-time-btn" style="margin-top:1em;font-size:1em;padding:0.5em 1.5em;">Copy time</button>
+                    </div>
+                  </div>
+
 
 
                 </div>
