--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p><i>let's make the next wordle.</i></p>
         <img id="open-logo" src="assets/logo.png" alt="toybox">
         <p>ship a <em>daily</em> game, get a steam gift card!</p>
-        <p>17 – 22 july 2025</p>
+        <p>17 – 23 july 2025 · ended!</p>
         <a href="https://forms.hackclub.com/toybox" target="_blank" class="submit">submit!</a>
 
         <details id="game">
@@ -123,6 +123,89 @@
 
 
         </details>
+
+
+        <div class="">
+          <h1 class="h1-flipped">↓ try these submitted games ↓</h1>
+          <div class="submitted-scrolling">
+            <div class="submitted-game">
+              <img src="/assets/submitted/blackbox.png" alt="">
+              <p><a href="https://jeremyseq.dev/games/sumitup" target="_blank">Blackbox</a></p>
+              <p>by Matthew</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/reversedictionary.png" alt="">
+              <p><a href="https://mattseq.github.io/reverse-dictionary/" target="_blank">Reverse Dictionary</a></p>
+              <p>by Jeremy</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/blackbox.png" alt="">
+              <p><a href="https://blackbox.hridya.tech/" target="_blank">Blackbox</a></p>
+              <p>by Hridya</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/emode.png" alt="">
+              <p><a href="https://emode.neploom.com/" target="_blank">Emode</a></p>
+              <p>by Samikshya</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/magicle.png" alt="">
+              <p><a href="https://s-hazel.github.io/magicle/" target="_blank">Magicle</a></p>
+              <p>by Sam</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/primehunt.png" alt="">
+              <p><a href="https://prime-hunt.vercel.app" target="_blank">Prime Hunt</a></p>
+              <p>by Suni</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/getto24.png" alt="">
+              <p><a href="https://alexd717.github.io/Daily-24/" target="_blank">Get to 24</a></p>
+              <p>by Alexey</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/pixipaint.png" alt="">
+              <p><a href="https://pixipaint-nu.vercel.app/" target="_blank">Pixipaint</a></p>
+              <p>by Justin</p>
+            </div>
+
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/math.png" alt="">
+              <p><a href="https://maths-quiz-game.vercel.app" target="_blank">Math Quiz</a></p>
+              <p>by Atul</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/knightle.png" alt="">
+              <p><a href="https://knightle.onrender.com" target="_blank">Knightle</a></p>
+              <p>by Brooklyn</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/ratbox.png" alt="">
+              <p><a href="https://itsfelix5.github.io/RatBox/" target="_blank">Rat Box</a></p>
+              <p>by Felix</p>
+            </div>
+
+            <div class="submitted-game">
+              <img src="/assets/submitted/cupfee.png" alt="">
+              <p><a href="https://froppii.github.io/cupfee" target="_blank">Cupfee</a></p>
+              <p>by Darlene</p>
+            </div>
+
+
+
+          </div>
+
+        </div>
 
       </section>
 
