--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
           <h1 class="h1-flipped">↓ try these submitted games ↓</h1>
           <div class="submitted-scrolling">
             <div class="submitted-game">
-              <img src="/assets/submitted/blackbox.png" alt="">
-              <p><a href="https://jeremyseq.dev/games/sumitup" target="_blank">Blackbox</a></p>
-              <p>by Matthew</p>
+              <img src="/assets/submitted/sumitup.png" alt="">
+              <p><a href="https://jeremyseq.dev/games/sumitup" target="_blank">Sum It Up</a></p>
+              <p>by Jeremy</p>
             </div>
 
             <div class="submitted-game">
               <img src="/assets/submitted/reversedictionary.png" alt="">
               <p><a href="https://mattseq.github.io/reverse-dictionary/" target="_blank">Reverse Dictionary</a></p>
-              <p>by Jeremy</p>
+              <p>by Matthew</p>
             </div>
 
             <div class="submitted-game">
